Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51961

QTimer does not work in a thread with CoreFoundation event dispatcher

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 5.15
    • 5.6, 5.9.2, 5.10.0 Beta 2
    • None
    • OS X 10.11
    • macOS

    Description

      I have a multi-threaded application, the secondary/worker thread sets its event dispatcher to QEventDispatcherCoreFoundation. Somehow QTimer never fires on this thread (I'm attaching the reproducer app also).

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              sorvig Morten Sørvig
              tpochep Timur Pocheptsov
              Votes:
              1 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes