src/corelib/thread/qthread_win.cpp
@@ -312,6 +312,7 @@ unsigned int __stdcall QT_ENSURE_STACK_ALIGNED_FOR_SSE QThreadPrivate::start(voi
     }
 
     data->ensureEventDispatcher();
+    data->eventDispatcher.loadRelaxed()->startingUp();
 
 #if !defined(QT_NO_DEBUG) && defined(Q_CC_MSVC)
     // sets the name of the current thread.
